--- a/ET46_CustomRender/ET46_CustomRender.iOS/ET46_CustomRender.iOS.csproj
+++ b/ET46_CustomRender/ET46_CustomRender.iOS/ET46_CustomRender.iOS.csproj
@@ -88,8 +88,11 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="EllipseUIView.cs" />
+    <Compile Include="EllipseViewRenderer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="VistaHolaRenderer.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
